Use DynamoDBCrudRepository instead of DynamoDBMapper and Changes according to that and changes for Todos Completed!